# kithairon

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md  requirements-docs.txt
docs/source/: conf.py  index.rst
docs/source/reference/: index.rst
docs/source/reference/echo-formats/: echo-platesurvey.rst  echo-surveyreport.rst
python/kithairon/: __init__.py  _util.py  labware.py  picklists.py
python/kithairon/surveys/: __init__.py  platesurvey.py  surveydata.py  surveyreport.py
src/: labware.rs  lib.rs  picklist.rs  python.rs
src/echo_utils/: __init__.py  labware.py  picklists.py  prelude.py  surveylogs.py  surveys.py
src/kithairon/: __init__.py  _util.py  labware.py  picklists.py  surveys.py
src/kithairon/surveys/: __init__.py  platesurvey.py  surveydata.py  surveyreport.py
src/surveys/: mod.rs  platesurvey.rs  surveydata.rs  surveyreport.rs
tests/: conftest.py  test__util.py  test_distances.py  test_labware.py  test_picklist.py  test_real_surveys.py  test_surveys.py
tests/test_data/: Labware.elw  Labware.elwx  platesurvey.xml  surveyreport-cp.xml
