[package]
name = "kithairon"
version = "0.4.0-dev"
edition = "2024"
rust-version = "1.85"
authors = ["Constantine Evans <const@costi.net>"]
license = "EUPL-1.2"
description = "Data types and logic for the Echo liquid handler (picklists, labware, plate surveys)."
repository = "https://github.com/cgevans/kithairon"
readme = "README.md"
categories = ["science"]

[lib]
name = "kithairon"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["dep:pyo3"]
abi3 = ["python", "pyo3/abi3-py311"]

[dependencies]
thiserror = "2.0"
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }
