[package]
name = "kithairon"
version = "0.4.0-dev"
edition = "2024"
rust-version = "1.85"
authors = ["Constantine Evans <const@costi.net>"]
license = "EUPL-1.2"
description = "Data types and logic for the Echo liquid handler (picklists, labware, plate surveys)."
repository = "https://github.com/cgevans/kithairon"
readme = "README.md"
categories = ["science"]

[lib]
name = "kithairon"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["dep:pyo3"]
abi3 = ["python", "pyo3/abi3-py311"]

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.31", features = ["serialize"] }
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
csv = "1.3"
petgraph = "0.8"
indexmap = { version = "2", features = ["serde"] }
log = "0.4"
polars = { version = "0.53", default-features = false, features = ["fmt", "parquet", "dtype-datetime", "dtype-struct"] }
pyo3 = { version = "0.28", features = ["extension-module", "chrono"], optional = true }

[dev-dependencies]
insta = "1.41"
