[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "kithairon"
readme = "README.md"
version = "0.1.0"
description = "A library for the Echo liquid handler."
authors = [{ name = "Constantine Evans", email = "const@costi.net" }]
license = { file = "LICENCE.txt" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/cgevans/kithairon"
Documentation = "https://kithairon.readthedocs.io/en/latest/"

dependencies = [
    "polars > 0.19",
    "numpy >= 1",
    "pydantic-xml == 2",
]

[project.optional-dependencies]
graphics = [
    "seaborn >= 0.13",
]
all = [
    "kithairon[graphics]",
]
docs = [
    "kithairon[all]",
    "sphinx ~= 7.2",
    "numpydoc ~= 1.6",
    "pydata-sphinx-theme ~= 0.14",
    "autodocsumm ~= 0.2",
    "autodoc_pydantic ~= 2.0"
]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[tool.setuptools.packages.find]
where = ["src"]
